# AgentNova

./: .gitignore  ARCH.md  AgentNova.ipynb  Architecture.md  CHANGELOG.md  COMPARISON_REPORT.md  CREDITS.md  README.md  TESTS.md  brief.md  pyproject.toml
agentnova/: __init__.py  __main__.py  acp_plugin.py  agent.py  agent_mode.py  bitnet_client.py  bitnet_setup.py  cli.py  colors.py  config.py  model_discovery.py  orchestrator.py  orchestrator_enhanced.py  shared_args.py  tested_models.json  turbo.py
agentnova/backends/: __init__.py  base.py  bitnet.py  llama_server.py  ollama.py  ollama_registry.py  zai.py
agentnova/core/: __init__.py  agent.py  agent_modes.py  args_normal.py  error_recovery.py  helpers.py  math_prompts.py  memory.py  model_config.py  model_family_config.py  models.py  ollama_client.py  openresponses.py  orchestrator.py  orchestrator_enhanced.py  persistent_memory.py  prompts.py  tool_cache.py  tool_parse.py  tools.py  types.py
agentnova/examples/: 00_backend_demo.py  00_basic_agent.py  01_basic_agent.py  01_quick_diagnostic.py  02_tool_agent.py  02_tool_test.py  03_orchestrator.py  03_reasoning_test.py  04_comprehensive_test.py  04_gsm8k_benchmark.py  05_common_sense.py  05_tool_tests.py  06_causal_reasoning.py  06_interactive_chat.py  07_logical_deduction.py  07_model_comparison.py  08_reading_comprehension.py  08_robust_comparison.py  09_expanded_benchmark.py  09_general_knowledge.py  10_implicit_reasoning.py  10_skills_demo.py  11_analogical_reasoning.py  11_skill_creator_test.py  12_batch_operations.py  13_shutdown_demo.py  14_gsm8k_benchmark.py  15_quick_diagnostic.py  16_agent_mode_test.py  __init__.py
agentnova/plugins/: __init__.py  _loader.py
agentnova/plugins/acp/: __init__.py  acp_plugin.py  plugin.json
agentnova/plugins/bitnet/: __init__.py  bitnet.py  plugin.json
agentnova/plugins/test-plugin/: __init__.py  plugin.json  test_backend.py
agentnova/plugins/turboquant/: __init__.py  plugin.json  turbo.py
agentnova/plugins/zai/: __init__.py  plugin.json  zai.py
agentnova/skills/: __init__.py  loader.py
agentnova/skills/acp/: SKILL.md
agentnova/skills/codebase-audit/: SKILL.md
agentnova/skills/crypto-signals/: SKILL.md
agentnova/skills/crypto-signals/references/: free_apis.md  indicators.md
agentnova/skills/crypto-signals/scripts/: crypto_signal_agent.py
agentnova/skills/datetime/: SKILL.md
agentnova/skills/skill-creator/: SKILL.md
agentnova/skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py  security_scan.py  test_package_skill.py  test_quick_validate.py  validate.py
agentnova/skills/test-harness/: SKILL.md
agentnova/skills/web-search/: SKILL.md
agentnova/skills/web_search/: SKILL.md
agentnova/soul/: __init__.py  loader.py  types.py
agentnova/souls/nova-helper/: AGENTS.md  IDENTITY.md  SOUL.md  STYLE.md  soul.json
agentnova/souls/nova-skills/: AGENTS.md  IDENTITY.md  SOUL.md  STYLE.md  soul.json
agentnova/souls/nova-trading/: AGENTS.md  IDENTITY.md  SOUL.md  STYLE.md  TRADING_REFERENCE.md  soul.json
agentnova/tools/: __init__.py  builtins.py  registry.py  sandboxed_repl.py
audit/: AgentNova_Compliance_Audit_Report.md
audit/R033/: AgentNova_Compliance_Audit_Report.md
docs/: ARCH.md  CHANGELOG.md  CREDITS.md  PLUGIN_SPEC.md  audit.md
localclaw/: __init__.py  __main__.py
localclaw-redirect/: README.md  gitignore  pyproject.toml
localclaw-redirect/localclaw/: __init__.py
patches/: fix_turbo_v_padding.patch  fix_turbo_v_padding.py  fix_turboquant_v_unpadding_gqa.patch
souls/nova-helper/: STYLE.md
tests/: __init__.py  test_acp_integration.py  test_acp_subagents.py  test_agent.py  test_builtins.py  test_r046_changes.py  test_r048_changes.py  test_security.py  test_skills.py  test_spec_compliance.py  test_zai_backend.py
