[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnova"
version = "0.3.0"
description = "⚛️ AgentNova - A minimal, hackable agentic framework for local LLM inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VTSTech", email = "veritas@vts-tech.org"}
]
maintainers = [
    {name = "VTSTech", email = "veritas@vts-tech.org"}
]
keywords = [
    "llm",
    "agent",
    "ollama",
    "bitnet",
    "local-inference",
    "tool-calling",
    "react",
    "autonomous",
    "agentic",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
# Zero dependencies! Uses Python stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://www.vts-tech.org"
Documentation = "https://github.com/VTSTech/AgentNova#readme"
Repository = "https://github.com/VTSTech/AgentNova"
Issues = "https://github.com/VTSTech/AgentNova/issues"

[project.scripts]
agentnova = "agentnova.cli:main"
localclaw = "localclaw:main"

[project.entry-points."agentnova.backends"]
ollama = "agentnova.backends.ollama:OllamaBackend"
bitnet = "agentnova.backends.bitnet:BitNetBackend"

[tool.setuptools.packages.find]
include = ["agentnova", "agentnova.*", "localclaw"]

[tool.setuptools.package-data]
agentnova = ["py.typed", "skills/*/SKILL.md"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
