[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localclaw"
version = "0.4.0.1"
description = "REDIRECT PACKAGE - Use 'agentnova' instead. This package has been renamed."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VTSTech", email = "veritas@vts-tech.org"}
]
dependencies = [
    "agentnova>=0.0",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/VTSTech/AgentNova"
Repository = "https://github.com/VTSTech/AgentNova"

[project.scripts]
localclaw = "localclaw:main"

[tool.setuptools.packages.find]
include = ["localclaw"]
